Upload trivia images

--- a/trivia.html
+++ b/trivia.html
@@ -30,7 +30,7 @@
       <main role="main" class="inner cover">
         <div class="row">
           <div class="col-lg-6 option">
-            <a href="trivia-legal.html"><img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140"></a>
+            <a href="trivia-legal.html"><img class="rounded-circle" src="images/legal.png" width="140" height="140"></a>
             <h2>Legal</h2>  
             <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
@@ -39,7 +39,7 @@
           </div>
           </div>
           <div class="col-lg-6 option">
-            <a href="trivia-ilegal.html"><img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140"></a>
+            <a href="trivia-ilegal.html"><img class="rounded-circle" src="images/ilegal.png" width="140" height="140"></a>
             <h2>Ilegal</h2>
             <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
@@ -50,7 +50,7 @@
           </div>
           <div class="row">
           <div class="col-lg-12 option">
-            <a href="azar.html"><img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140"></a>
+            <a href="azar.html"><img class="rounded-circle" src="images/azar.png" width="140" height="140"></a>
             <h2>Al azar</h2>
           </div>
         </div>
