--- a/trivia-ilegal.html
+++ b/trivia-ilegal.html
@@ -24,44 +24,34 @@
       <header class="masthead mb-auto">
         <div class="inner">
           <h3 class="masthead-brand">PrevenApp</h3>
+          <nav class="nav nav-masthead justify-content-center">
+          </nav>
         </div>
       </header>
 
       <main role="main" class="inner cover">
-        <div class="row">
-          <div class="col-lg-6 option">
-            <a href="trivia-legal.html"><img class="rounded-circle" src="images/legal.png" width="140" height="140"></a>
-            <h2>Legal</h2>  
-            <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
-            <span class="sr-only">15% Complete</span>
-            </div>
+      <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Pregunta/afirmación</h4>
           </div>
-          </div>
-          <div class="col-lg-6 option">
-            <a href="trivia-ilegal.html"><img class="rounded-circle" src="images/ilegal.png" width="140" height="140"></a>
-            <h2>Ilegal</h2>
-            <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
-            <span class="sr-only">15% Complete</span>
-            </div>
-            </div>
-          </div>
-          </div>
-          <div class="row">
-          <div class="col-lg-12 option">
-            <a href="azar.html"><img class="rounded-circle" src="images/azar.png" width="140" height="140"></a>
-            <h2>Al azar</h2>
+          <div class="card-body">
+            <p id="question">LOREM IPSUM</p>
+            <div class="row">
+            <button type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Verdadero</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Falso</button>
+            </div>          
           </div>
         </div>
+      </div>
+          <a href="#" class="btn btn-lg btn-secondary">Otras categorías</a>
+          <a href="#" class="btn btn-lg btn-secondary">Siguiente</a>
       </main>
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
           <p> <a href="https://getbootstrap.com/"></a><a href="https://twitter.com/mdo"></a></p>
         </div>
-        <button id="authorize_button" style="display: none;">Authorize</button>
-    <button id="signout_button" style="display: none;">Sign Out</button>
       </footer>
     </div>
 
@@ -73,11 +63,6 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script async defer src="https://apis.google.com/js/api.js"
-      onload="this.onload=function(){};handleClientLoad()"
-      onreadystatechange="if (this.readyState === 'complete') this.onload()">
-    </script>
-    <script src="js/service/google_sheet_connector.js"></script>
     <script src="js/service/trivias.js"></script>
   </body>
 </html>
