--- a/trivia-legal.html
+++ b/trivia-legal.html
@@ -30,7 +30,7 @@
       </header>
 
       <main role="main" class="inner cover">
-      <div class="card-deck mb-3 text-center">
+      <div class="card-deck mb-3 text-center" >
         <div class="card mb-4 shadow-sm">
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">Pregunta/afirmación</h4>
@@ -63,5 +63,6 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/service/trivias.js"></script>
   </body>
 </html>
