Add static questions

--- a/trivia-ilegal.html
+++ b/trivia-ilegal.html
@@ -52,6 +52,10 @@
         <div class="inner">
           <p> <a href="https://getbootstrap.com/"></a><a href="https://twitter.com/mdo"></a></p>
         </div>
+        <div>
+          <button id="authorize_button" style="display: none;">Authorize</button>
+         <button id="signout_button" style="display: none;">Sign Out</button>
+        </div>
       </footer>
     </div>
 
@@ -63,6 +67,12 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <!-- <script async defer src="https://apis.google.com/js/api.js"
+      onload="this.onload=function(){};handleClientLoad()"
+      onreadystatechange="if (this.readyState === 'complete') this.getResults()">
+    </script> -->
+    <script src="js/service/questions.js"></script>
+    <!-- <script src="js/service/google_sheet_connector.js"></script> -->
     <script src="js/service/trivias.js"></script>
   </body>
 </html>
