--- a/trivia-legal.html
+++ b/trivia-legal.html
@@ -30,13 +30,13 @@
       </header>
 
       <main role="main" class="inner cover">
-      <div class="card-deck mb-3 text-center" >
+      <div class="card-deck mb-3 text-center" id="legal-trivia">
         <div class="card mb-4 shadow-sm">
           <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Pregunta/afirmación</h4>
+            <h4 class="my-0 font-weight-normal" >Pregunta/afirmación</h4>
           </div>
           <div class="card-body">
-            <p id="question">LOREM IPSUM</p>
+            <p id="legal-question">LOREM IPSUM</p>
             <div class="row">
             <button type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Verdadero</button>
             <button type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Falso</button>
@@ -45,12 +45,16 @@
         </div>
       </div>
           <a href="#" class="btn btn-lg btn-secondary">Otras categorías</a>
-          <a href="#" class="btn btn-lg btn-secondary">Siguiente</a>
+          <a href="#" class="btn btn-lg btn-secondary" id="legal-next-btn">Siguiente</a>
       </main>
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
           <p> <a href="https://getbootstrap.com/"></a><a href="https://twitter.com/mdo"></a></p>
+        </div>
+        <div>
+          <button id="authorize_button" style="display: none;">Authorize</button>
+         <button id="signout_button" style="display: none;">Sign Out</button>
         </div>
       </footer>
     </div>
@@ -63,6 +67,12 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <!-- <script async defer src="https://apis.google.com/js/api.js"
+      onload="this.onload=function(){};handleClientLoad()"
+      onreadystatechange="if (this.readyState === 'complete') this.getResults()">
+    </script> -->
+    <script src="js/service/questions.js"></script>
+    <!-- <script src="js/service/google_sheet_connector.js"></script> -->
     <script src="js/service/trivias.js"></script>
   </body>
 </html>
