--- a/trivia-legal.html
+++ b/trivia-legal.html
@@ -38,8 +38,8 @@
           <div class="card-body">
             <p id="legal-question">LOREM IPSUM</p>
             <div class="row">
-            <button type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Verdadero</button>
-            <button type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Falso</button>
+            <button id="legal-true" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Verdadero</button>
+            <button id="legal-false" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Falso</button>
             </div>          
           </div>
         </div>
