--- a/trivia-legal.html
+++ b/trivia-legal.html
@@ -36,7 +36,10 @@
             <h4 class="my-0 font-weight-normal" >Pregunta/afirmación</h4>
           </div>
           <div class="card-body">
-            <p id="legal-question">LOREM IPSUM</p>
+            <div id="legal-question-div">
+              <p id="legal-question"></p>
+              <div id="legal-question-info"></div>
+            </div>
             <div class="row">
             <button id="legal-true" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Verdadero</button>
             <button id="legal-false" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Falso</button>
