Add ilegal questions

--- a/trivia-ilegal.html
+++ b/trivia-ilegal.html
@@ -30,22 +30,21 @@
       </header>
 
       <main role="main" class="inner cover">
-      <div class="card-deck mb-3 text-center">
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Pregunta/afirmación</h4>
-          </div>
-          <div class="card-body">
-            <p id="question">LOREM IPSUM</p>
-            <div class="row">
-            <button type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Verdadero</button>
-            <button type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Falso</button>
-            </div>          
+      <div class="card text-center">
+        <div class="card-header">
+          Pregunta/afirmación
+        </div>
+        <div class="card-body">
+          <h5 class="card-title" id="ilegal-question"></h5>
+          <p class="card-text" id="ilegal-question-info"></p>
+          <a class="btn btn-lg btn-primary" id="ilegal-true">Verdadero</a>
+          <a class="btn btn-lg btn-primary" id="ilegal-false">Falso</a>
+          <div class="card-footer text-muted">
+            <a href="trivia.html" class="btn btn-secondary">Otras categorías</a>
+            <a href="#" class="btn btn-secondary" id="ilegal-next-btn">Siguiente</a>
           </div>
         </div>
       </div>
-          <a href="#" class="btn btn-lg btn-secondary">Otras categorías</a>
-          <a href="#" class="btn btn-lg btn-secondary">Siguiente</a>
       </main>
 
       <footer class="mastfoot mt-auto">
