--- a/trivia.html
+++ b/trivia.html
@@ -50,7 +50,7 @@
           </div>
           <div class="row">
           <div class="col-lg-12 option">
-            <a href="azar.html"><img class="rounded-circle" src="images/azar.png" width="140" height="140"></a>
+            <a href="#"><img class="rounded-circle" src="images/azar.png" width="140" height="140"></a>
             <h2>Al azar</h2>
           </div>
         </div>
