agregamos pagina aleatoria

--- a/azar.html
+++ b/azar.html
@@ -31,25 +31,25 @@
       </header>
 
       <main role="main" class="inner cover">
-      <div class="card-deck mb-3 text-center" id="legal-trivia">
+      <div class="card-deck mb-3 text-center" id="azar-trivia">
         <div class="card mb-4 shadow-sm">
           <div class="card-header">
             <h4 class="my-0 font-weight-normal" >Pregunta/afirmación</h4>
           </div>
           <div class="card-body">
-            <div id="legal-question-div">
-              <p id="legal-question"></p>
-              <div id="legal-question-info"></div>
+            <div id="azar-question-div">
+              <p id="azar-question"></p>
+              <div id="azar-question-info"></div>
             </div>
             <div class="row">
-            <button id="legal-true" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Verdadero</button>
-            <button id="legal-false" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Falso</button>
+            <button id="azar-true" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Verdadero</button>
+            <button id="azar-false" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Falso</button>
             </div>          
           </div>
         </div>
       </div>
           <a href="#" class="btn btn-lg btn-secondary">Otras categorías</a>
-          <a href="#" class="btn btn-lg btn-secondary" id="legal-next-btn">Siguiente</a>
+          <a href="#" class="btn btn-lg btn-secondary" id="azar-next-btn">Siguiente</a>
       </main>
 
       <footer class="mastfoot mt-auto">
