--- a/trivia.html
+++ b/trivia.html
@@ -50,7 +50,7 @@
           </div>
           <div class="row">
           <div class="col-lg-12 option">
-            <a href="#"><img class="rounded-circle" src="images/azar.png" width="140" height="140"></a>
+            <a href="azar.html"><img class="rounded-circle" src="images/azar.png" width="140" height="140"></a>
             <h2>Al azar</h2>
           </div>
         </div>
@@ -71,11 +71,7 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script async defer src="https://apis.google.com/js/api.js"
-      onload="this.onload=function(){};handleClientLoad()"
-      onreadystatechange="if (this.readyState === 'complete') this.getResults()">
-    </script>
-    <script src="js/service/google_sheet_connector.js"></script>
+    <script src="js/service/questions.js"></script>
     <script src="js/service/trivias.js"></script>
   </body>
 </html>
