--- a/trivia-legal.html
+++ b/trivia-legal.html
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-          <a href="#" class="btn btn-lg btn-secondary">Otras categorías</a>
+          <a href="trivia.html" class="btn btn-lg btn-secondary">Otras categorías</a>
           <a href="#" class="btn btn-lg btn-secondary" id="legal-next-btn">Siguiente</a>
       </main>
 
