estilo de botones

--- a/trivia-ilegal.html
+++ b/trivia-ilegal.html
@@ -37,8 +37,8 @@
         <div class="card-body">
           <h5 class="card-title" id="ilegal-question"></h5>
           <p class="card-text" id="ilegal-question-info"></p>
-          <a class="btn btn-lg btn-primary" id="ilegal-true">Verdadero</a>
-          <a class="btn btn-lg btn-primary" id="ilegal-false">Falso</a>
+          <a class="btn btn-lg btn-block btn-outline-secondary" id="ilegal-true">Verdadero</a>
+          <a class="btn btn-lg btn-block btn-outline-secondary" id="ilegal-false">Falso</a>
           <div class="card-footer text-muted">
             <a href="trivia.html" class="btn btn-secondary">Otras categorías</a>
             <a href="#" class="btn btn-secondary" id="ilegal-next-btn">Siguiente</a>
