cambio de logo y botones

--- a/azar.html
+++ b/azar.html
@@ -42,8 +42,8 @@
               <div id="azar-question-info"></div>
             </div>
             <div class="row">
-            <button id="azar-true" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Verdadero</button>
-            <button id="azar-false" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Falso</button>
+            <button id="azar-true" type="button" class="btn btn-lg btn-block btn-outline-secondary">Verdadero</button>
+            <button id="azar-false" type="button" class="btn btn-lg btn-block btn-outline-secondary">Falso</button>
             </div>          
           </div>
         </div>
