--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </header>
 
       <main role="main" class="inner cover">
-      	<img src="images/logo.png" class="img-circle">
+      	<img src="images/nuevo-logo.png" class="img-circle">
         <h1 class="cover-heading">¡Jugá con PrevenApp!</h1>
         <p class="lead">
           <a href="trivia.html" class="btn btn-lg btn-secondary">Ingresá</a>
