--- a/trivia-ilegal.html
+++ b/trivia-ilegal.html
@@ -30,15 +30,15 @@
       </header>
 
       <main role="main" class="inner cover">
-      <div class="card text-center">
+      <div class="card text-center" id="ilegal-trivia">
         <div class="card-header">
           Pregunta/afirmación
         </div>
         <div class="card-body">
           <h5 class="card-title" id="ilegal-question"></h5>
           <p class="card-text" id="ilegal-question-info"></p>
-          <a class="btn btn-lg btn-block btn-outline-secondary" id="ilegal-true">Verdadero</a>
-          <a class="btn btn-lg btn-block btn-outline-secondary" id="ilegal-false">Falso</a>
+          <button type="button" id="ilegal-true" class="btn btn-lg btn-block btn-outline-secondary" >Verdadero</button>
+          <button type="button" id="ilegal-false" class="btn btn-lg btn-block btn-outline-secondary" >Falso</button>
           <div class="card-footer text-muted">
             <a href="trivia.html" class="btn btn-secondary">Otras categorías</a>
             <a href="#" class="btn btn-secondary" id="ilegal-next-btn">Siguiente</a>
