--- a/trivia-legal.html
+++ b/trivia-legal.html
@@ -41,10 +41,8 @@
               <p id="legal-question"></p>
               <div id="legal-question-info"></div>
             </div>
-            <div class="row">
-            <button id="legal-true" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Verdadero</button>
-            <button id="legal-false" type="button" class="btn btn-lg btn-block btn-outline-secondary col-lg-6">Falso</button>
-            </div>          
+            <button id="legal-true" type="button" class="btn btn-lg btn-block btn-outline-secondary">Verdadero</button>
+            <button id="legal-false" type="button" class="btn btn-lg btn-block btn-outline-secondary">Falso</button>
           </div>
         </div>
       </div>
