--- a/azar.html
+++ b/azar.html
@@ -16,6 +16,8 @@
     <!-- Custom styles for this template -->
     <link href="css/index.css" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+
   </head>
 
   <body class="text-center">
